--- a/main.html
+++ b/main.html
@@ -8,6 +8,13 @@
   <body>
     <!-- write the body here -->
 
+	  <form name="myForm" action="#" method="post" onsubmit="validateForm(event)">
+    <label for="name">Name:</label>
+    <input type="text" name="name" id="name">
+    <label for="age">Age:</label>
+    <input type="number" name="age" id="age">
+    <input id="btn" type="submit">
+  </form>
     <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
