--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     <input type="text" name="name" id="name">
     <label for="age">Age:</label>
     <input type="number" name="age" id="age">
-    <input id="btn" type="submit">
+	<button id="btn" type="submit">Submit</button>
   </form>
     <script type="text/javascript" src="./script.js"></script>
   </body>
